add_payment: update api contracts
